--- a/active_power_pred.ipynb
+++ b/active_power_pred.ipynb
@@ -200,10 +200,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "اندازه داده آموزش: 272 ساعت\n",
-      "اندازه داده تست: 15 ساعت\n"
+      "train data: 272 hour\n",
+      "test data: 15 hour\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "\n",
+    "train_ratio = 0.95\n",
+    "train, test = series_scaled.split_after(train_ratio)\n",
+    "\n",
+    "print(f\"train data: {len(train)} hour\")\n",
+    "print(f\"test data: {len(test)} hour\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -214,18 +229,12 @@
     }
    ],
    "source": [
-    "\n",
-    "train_ratio = 0.95\n",
-    "train, test = series_scaled.split_after(train_ratio)\n",
-    "\n",
-    "print(f\"اندازه داده آموزش: {len(train)} ساعت\")\n",
-    "print(f\"اندازه داده تست: {len(test)} ساعت\")\n",
     "from darts.models import RNNModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7294f7bcc37d4db29d1638d70a8cd487",
+       "model_id": "c8a5636a21134d1cae95ad3b3b000fb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +318,7 @@
        "RNNModel(model=LSTM, hidden_dim=100, n_rnn_layers=6, dropout=0.2, training_length=36, input_chunk_length=24, output_chunk_length=12, n_epochs=100, random_state=42)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c21e49fbb3a4bf596e46ebb2fc2062d",
+       "model_id": "eacbc5c62d4846c5af2192c51bf206cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
