--- a/active_power_pred.ipynb
+++ b/active_power_pred.ipynb
@@ -7,38 +7,14 @@
    "outputs": [],
    "source": [
     "# import pandas as pd\n",
-    "# from datetime import datetime, timedelta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# from datetime import datetime, timedelta\n",
     "# # خواندن فایل CSV\n",
-    "# df = pd.read_csv(\"power_code.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# df = pd.read_csv(\"power_code.csv\")\n",
     "# # تبدیل تاریخ با فرمت‌های مختلف\n",
     "# df['DATE_MILADI'] = pd.to_datetime(df['DATE_MILADI'], format='mixed', errors='coerce')\n",
     "\n",
     "# # حذف ردیف‌هایی که تبدیل تاریخ در آن‌ها ناموفق بوده\n",
-    "# df = df.dropna(subset=['DATE_MILADI'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# df = df.dropna(subset=['DATE_MILADI'])\n",
     "# # ساخت ستون جدید DATE با ساعت اصلاح‌شده از ستون HOUR\n",
     "# df['DATE'] = df.apply(lambda row: row['DATE_MILADI'].replace(hour=int(row['HOUR']) % 24), axis=1)\n",
     "\n",
@@ -46,7 +22,7 @@
     "# print(df[['DATE_MILADI', 'HOUR', 'DATE']].head())\n",
     "\n",
     "# # ذخیره فایل جدید در صورت نیاز\n",
-    "# df.to_csv('updated_file.csv', index=False)\n"
+    "# df.to_csv('updated_file.csv', index=False)"
    ]
   },
   {
