--- a/active_power_pred_with_temp_covariates.ipynb
+++ b/active_power_pred_with_temp_covariates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pishva_r\\Anaconda3\\envs\\test2\\Lib\\site-packages\\torch\\utils\\_pytree.py:185: FutureWarning: optree is installed but the version is too old to support PyTorch Dynamo in C++ pytree. C++ pytree support is disabled. Please consider upgrading optree using `python3 -m pip install --upgrade 'optree>=0.13.0'`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dee045ae02d4148836b735f7f1a5ba3",
+       "model_id": "f0eefd44c5c44f2f80cc9cd15e5bb517",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +271,7 @@
        "BlockRNNModel(output_chunk_shift=0, model=LSTM, hidden_dim=64, n_rnn_layers=10, hidden_fc_sizes=None, dropout=0.2, activation=ReLU, input_chunk_length=24, output_chunk_length=12, n_epochs=100, random_state=42)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c128c3de34f434fb4a9afdb12669a2d",
+       "model_id": "5fed47aa7dde4b0fa79d12100223a3c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
