--- a/pivoting.ipynb
+++ b/pivoting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,25 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pishva_r\\AppData\\Local\\Temp\\ipykernel_14816\\4045991169.py:52: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  output_df = pd.concat([output_df, pd.DataFrame([row_data])], ignore_index=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ پردازش کامل شد و خروجی در فایل output.xlsx ذخیره شد.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import pandas as pd\n",
     "# import numpy as np\n",
@@ -339,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pishva_r\\AppData\\Local\\Temp\\ipykernel_14816\\3731443107.py:52: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\pishva_r\\AppData\\Local\\Temp\\ipykernel_14816\\2110964101.py:52: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  output_df = pd.concat([output_df, pd.DataFrame([row_data])], ignore_index=True)\n"
      ]
     },
@@ -363,7 +347,7 @@
     "import numpy as np\n",
     "\n",
     "# مرحله 1: خواندن فایل CSV\n",
-    "df = pd.read_csv('gen_brg_vib.csv')\n",
+    "df = pd.read_csv('dsas12_main_trans_8312_8314.csv')\n",
     "\n",
     "# مرحله 2: استخراج AssetIDهای یکتا\n",
     "unique_ids = df['AssetID'].unique().tolist()\n",
